// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderContent should render without error, filled order 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c17 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c18 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c13 {
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c22 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #FC72FF;
  stroke: #FC72FF;
  font-weight: 500;
}

.c22:hover {
  opacity: 0.6;
}

.c22:active {
  opacity: 0.4;
}

.c8 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: #22222212;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c19 {
  cursor: auto;
  color: #7D7D7D;
}

.c20 {
  text-align: right;
  overflow-wrap: break-word;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c4 img:nth-child(n) {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c4 img:nth-child(1) {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c4 img:nth-child(2) {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c5 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c15 {
  width: 36px;
  height: 36px;
  border-radius: 50%;
}

.c14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c23 {
  background-color: #F9F9F9;
  border-radius: 12px;
  padding: 12px;
  margin-top: 12px;
}

.c24 {
  line-height: 16px;
}

.c21 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-align: left;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c9 {
  margin: 28px 0;
}

<div>
  <span
    class="t_light is_inversed _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0"
      >
        <div
          class="c1 c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            >
              <img
                class="c5"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              />
              <img
                class="c5"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
              />
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="c6 css-rjqmed"
            >
              Order executed
            </div>
            <div
              class="c7 css-1aekuku"
            >
              Mock Date
            </div>
          </div>
        </div>
        <div
          class="c8 c9"
        />
        <div
          class="c10"
        >
          <div
            class="c1 c11"
          >
            <div
              class="c12"
            >
              <div
                class="c12"
              >
                <div
                  class="c13 css-vhdk4b"
                  data-testid="INPUT-amount"
                >
                  252.074
                   
                  DAI
                </div>
                <div
                  class="c7 css-142zc9n"
                >
                  -
                </div>
              </div>
            </div>
            <div
              class="c14"
              style="height: 36px; width: 36px;"
            >
              <div
                class="c3"
              >
                <img
                  class="c15"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                />
              </div>
            </div>
          </div>
          <svg
            fill="none"
            height="24"
            stroke="#CECECE"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <polyline
              points="19 12 12 19 5 12"
            />
          </svg>
          <div
            class="c1 c11"
          >
            <div
              class="c12"
            >
              <div
                class="c12"
              >
                <div
                  class="c13 css-vhdk4b"
                  data-testid="OUTPUT-amount"
                >
                  0.10684
                   
                  WETH
                </div>
                <div
                  class="c7 css-142zc9n"
                >
                  -
                </div>
              </div>
            </div>
            <div
              class="c14"
              style="height: 36px; width: 36px;"
            >
              <div
                class="c3"
              >
                <img
                  class="c15"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="c8 c9"
        />
        <div
          class="c16"
        >
          <div
            class="c1 c17 c18"
          >
            <div
              class="c6 c19 css-142zc9n"
              data-testid="swap-li-label"
            >
              Rate
            </div>
            <div
              class="c6 c20 css-142zc9n"
            >
              <button
                class="c21"
                title="1 WETH = 2,359.34 DAI "
              >
                <div
                  class="c6 css-142zc9n"
                >
                  1 WETH = 2,359.34 DAI 
                </div>
                 
              </button>
            </div>
          </div>
          <div
            class="c1 c17 c18"
          >
            <div
              class="c6 c19 css-142zc9n"
              data-testid="swap-li-label"
            >
              Network cost
            </div>
            <div
              class="c6 c20 css-142zc9n"
            >
              <span>
                $0
              </span>
            </div>
          </div>
          <div
            class="c1 c17 c18"
          >
            <div
              class="c6 c19 css-142zc9n"
              data-testid="swap-li-label"
            >
              Transaction ID
            </div>
            <div
              class="c6 c20 css-142zc9n"
            >
              <a
                class="c22"
                href="https://etherscan.io/tx/0xad7a8f73f28fd0cc16459111899dd1632164ae139fcf5281a1bced56e1ff6564"
                rel="noopener noreferrer"
                target="_blank"
              >
                0xad...6564
              </a>
            </div>
          </div>
        </div>
        <div
          class="c16 c23"
        >
          <div
            class="c7 c24 css-1m65e73"
          >
            Please be aware that the execution for limits may vary based on real-time market fluctuations and Ethereum network congestion. Limits may not execute exactly when tokens reach the specified price.
          </div>
          <div
            class="c7 c24 css-1m65e73"
          >
            Canceling a limit has a network cost.
          </div>
          <div
            class="c7 c24 css-1m65e73"
          >
            <a
              class="c22"
              href="https://support.uniswap.org/hc/en-us/articles/24300813697933"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
            </a>
          </div>
        </div>
      </div>
    </span>
  </span>
</div>
`;

exports[`OrderContent should render without error, limit order 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c17 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c18 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c13 {
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c28 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #FC72FF;
  stroke: #FC72FF;
  font-weight: 500;
}

.c28:hover {
  opacity: 0.6;
}

.c28:active {
  opacity: 0.4;
}

.c8 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: #22222212;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c25 {
  background-color: transparent;
  bottom: 0;
  border-radius: inherit;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 150ms ease background-color;
  transition: 150ms ease background-color;
  width: 100%;
}

.c22 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22222212;
  border-radius: 16px;
  border: 0;
  color: #222222;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 16px;
  font-weight: 535;
  gap: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 20px;
  padding: 10px 12px;
  position: relative;
  -webkit-transition: 150ms ease opacity;
  transition: 150ms ease opacity;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c22:active .c24 {
  background-color: #B8C0DC3d;
}

.c22:focus .c24 {
  background-color: #B8C0DC3d;
}

.c22:hover .c24 {
  background-color: #98A1C014;
}

.c22:disabled {
  cursor: default;
  opacity: 0.6;
}

.c22:disabled:active .c24,
.c22:disabled:focus .c24,
.c22:disabled:hover .c24 {
  background-color: transparent;
}

.c19 {
  cursor: auto;
  color: #7D7D7D;
}

.c20 {
  text-align: right;
  overflow-wrap: break-word;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c4 img:nth-child(n) {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c4 img:nth-child(1) {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c4 img:nth-child(2) {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c5 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c15 {
  width: 36px;
  height: 36px;
  border-radius: 50%;
}

.c14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c26 {
  background-color: #F9F9F9;
  border-radius: 12px;
  padding: 12px;
  margin-top: 12px;
}

.c27 {
  line-height: 16px;
}

.c21 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-align: left;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c9 {
  margin: 28px 0;
}

.c23 {
  margin-top: 16px;
  border-radius: 12px;
}

<div>
  <span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0"
      >
        <div
          class="c1 c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            >
              <img
                class="c5"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              />
              <img
                class="c5"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
              />
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="c6 css-rjqmed"
            >
              Limit pending
            </div>
            <div
              class="c7 css-1aekuku"
            >
              Mock Date
            </div>
          </div>
        </div>
        <div
          class="c8 c9"
        />
        <div
          class="c10"
        >
          <div
            class="c1 c11"
          >
            <div
              class="c12"
            >
              <div
                class="c12"
              >
                <div
                  class="c13 css-vhdk4b"
                  data-testid="INPUT-amount"
                >
                  252.074
                   
                  DAI
                </div>
                <div
                  class="c7 css-142zc9n"
                >
                  -
                </div>
              </div>
            </div>
            <div
              class="c14"
              style="height: 36px; width: 36px;"
            >
              <div
                class="c3"
              >
                <img
                  class="c15"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                />
              </div>
            </div>
          </div>
          <svg
            fill="none"
            height="24"
            stroke="#CECECE"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <polyline
              points="19 12 12 19 5 12"
            />
          </svg>
          <div
            class="c1 c11"
          >
            <div
              class="c12"
            >
              <div
                class="c12"
              >
                <div
                  class="c13 css-vhdk4b"
                  data-testid="OUTPUT-amount"
                >
                  0.10684
                   
                  WETH
                </div>
                <div
                  class="c7 css-142zc9n"
                >
                  -
                </div>
              </div>
            </div>
            <div
              class="c14"
              style="height: 36px; width: 36px;"
            >
              <div
                class="c3"
              >
                <img
                  class="c15"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="c8 c9"
        />
        <div
          class="c16"
        >
          <div
            class="c1 c17 c18"
          >
            <div
              class="c6 c19 css-142zc9n"
              data-testid="swap-li-label"
            >
              Rate
            </div>
            <div
              class="c6 c20 css-142zc9n"
            >
              <button
                class="c21"
                title="1 WETH = 2,359.34 DAI "
              >
                <div
                  class="c6 css-142zc9n"
                >
                  1 WETH = 2,359.34 DAI 
                </div>
                 
              </button>
            </div>
          </div>
          <div
            class="c1 c17 c18"
          >
            <div
              class="c6 c19 css-142zc9n"
              data-testid="swap-li-label"
            >
              Expiry
            </div>
            <div
              class="c6 c20 css-142zc9n"
            >
              <span />
            </div>
          </div>
          <div
            class="c1 c17 c18"
          >
            <div
              class="c6 c19 css-142zc9n"
              data-testid="swap-li-label"
            >
              Network cost
            </div>
            <div
              class="c6 c20 css-142zc9n"
            >
              <span>
                $0
              </span>
            </div>
          </div>
        </div>
        <button
          class="c22 c23"
          size="1"
        >
          <div
            class="c24 c25"
          />
          Cancel limit
        </button>
        <div
          class="c16 c26"
        >
          <div
            class="c7 c27 css-1m65e73"
          >
            Please be aware that the execution for limits may vary based on real-time market fluctuations and Ethereum network congestion. Limits may not execute exactly when tokens reach the specified price.
          </div>
          <div
            class="c7 c27 css-1m65e73"
          >
            Canceling a limit has a network cost.
          </div>
          <div
            class="c7 c27 css-1m65e73"
          >
            <a
              class="c28"
              href="https://support.uniswap.org/hc/en-us/articles/24300813697933"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
            </a>
          </div>
        </div>
      </div>
    </span>
  </span>
</div>
`;

exports[`OrderContent should render without error, open order 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c17 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c18 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c13 {
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c28 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #FC72FF;
  stroke: #FC72FF;
  font-weight: 500;
}

.c28:hover {
  opacity: 0.6;
}

.c28:active {
  opacity: 0.4;
}

.c8 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: #22222212;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c25 {
  background-color: transparent;
  bottom: 0;
  border-radius: inherit;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 150ms ease background-color;
  transition: 150ms ease background-color;
  width: 100%;
}

.c22 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22222212;
  border-radius: 16px;
  border: 0;
  color: #222222;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 16px;
  font-weight: 535;
  gap: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 20px;
  padding: 10px 12px;
  position: relative;
  -webkit-transition: 150ms ease opacity;
  transition: 150ms ease opacity;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c22:active .c24 {
  background-color: #B8C0DC3d;
}

.c22:focus .c24 {
  background-color: #B8C0DC3d;
}

.c22:hover .c24 {
  background-color: #98A1C014;
}

.c22:disabled {
  cursor: default;
  opacity: 0.6;
}

.c22:disabled:active .c24,
.c22:disabled:focus .c24,
.c22:disabled:hover .c24 {
  background-color: transparent;
}

.c19 {
  cursor: auto;
  color: #7D7D7D;
}

.c20 {
  text-align: right;
  overflow-wrap: break-word;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c4 img:nth-child(n) {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c4 img:nth-child(1) {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c4 img:nth-child(2) {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c5 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c15 {
  width: 36px;
  height: 36px;
  border-radius: 50%;
}

.c14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c26 {
  background-color: #F9F9F9;
  border-radius: 12px;
  padding: 12px;
  margin-top: 12px;
}

.c27 {
  line-height: 16px;
}

.c21 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-align: left;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c9 {
  margin: 28px 0;
}

.c23 {
  margin-top: 16px;
  border-radius: 12px;
}

<div>
  <span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0"
      >
        <div
          class="c1 c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            >
              <img
                class="c5"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              />
              <img
                class="c5"
                src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
              />
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="c6 css-rjqmed"
            >
              Order pending
            </div>
            <div
              class="c7 css-1aekuku"
            >
              Mock Date
            </div>
          </div>
        </div>
        <div
          class="c8 c9"
        />
        <div
          class="c10"
        >
          <div
            class="c1 c11"
          >
            <div
              class="c12"
            >
              <div
                class="c12"
              >
                <div
                  class="c13 css-vhdk4b"
                  data-testid="INPUT-amount"
                >
                  252.074
                   
                  DAI
                </div>
                <div
                  class="c7 css-142zc9n"
                >
                  -
                </div>
              </div>
            </div>
            <div
              class="c14"
              style="height: 36px; width: 36px;"
            >
              <div
                class="c3"
              >
                <img
                  class="c15"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                />
              </div>
            </div>
          </div>
          <svg
            fill="none"
            height="24"
            stroke="#CECECE"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <polyline
              points="19 12 12 19 5 12"
            />
          </svg>
          <div
            class="c1 c11"
          >
            <div
              class="c12"
            >
              <div
                class="c12"
              >
                <div
                  class="c13 css-vhdk4b"
                  data-testid="OUTPUT-amount"
                >
                  0.10684
                   
                  WETH
                </div>
                <div
                  class="c7 css-142zc9n"
                >
                  -
                </div>
              </div>
            </div>
            <div
              class="c14"
              style="height: 36px; width: 36px;"
            >
              <div
                class="c3"
              >
                <img
                  class="c15"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="c8 c9"
        />
        <div
          class="c16"
        >
          <div
            class="c1 c17 c18"
          >
            <div
              class="c6 c19 css-142zc9n"
              data-testid="swap-li-label"
            >
              Rate
            </div>
            <div
              class="c6 c20 css-142zc9n"
            >
              <button
                class="c21"
                title="1 WETH = 2,359.34 DAI "
              >
                <div
                  class="c6 css-142zc9n"
                >
                  1 WETH = 2,359.34 DAI 
                </div>
                 
              </button>
            </div>
          </div>
          <div
            class="c1 c17 c18"
          >
            <div
              class="c6 c19 css-142zc9n"
              data-testid="swap-li-label"
            >
              Expiry
            </div>
            <div
              class="c6 c20 css-142zc9n"
            >
              <span />
            </div>
          </div>
          <div
            class="c1 c17 c18"
          >
            <div
              class="c6 c19 css-142zc9n"
              data-testid="swap-li-label"
            >
              Network cost
            </div>
            <div
              class="c6 c20 css-142zc9n"
            >
              <span>
                $0
              </span>
            </div>
          </div>
        </div>
        <button
          class="c22 c23"
          size="1"
        >
          <div
            class="c24 c25"
          />
          Cancel order
        </button>
        <div
          class="c16 c26"
        >
          <div
            class="c7 c27 css-1m65e73"
          >
            Please be aware that the execution for limits may vary based on real-time market fluctuations and Ethereum network congestion. Limits may not execute exactly when tokens reach the specified price.
          </div>
          <div
            class="c7 c27 css-1m65e73"
          >
            Canceling a limit has a network cost.
          </div>
          <div
            class="c7 c27 css-1m65e73"
          >
            <a
              class="c28"
              href="https://support.uniswap.org/hc/en-us/articles/24300813697933"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
            </a>
          </div>
        </div>
      </div>
    </span>
  </span>
</div>
`;
